--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ body{
     margin-top: 10px;
     font-size: 1.5rem;
 }
+.second {
+    font-size: 1.5rem;   
+}
 
 body a{
 	transition: 0.5s all;
